@@ -18,6 +18,7 @@ Kiwix 0.9 beta3
 * Added static compilation of components for Linux.
 * Added debian init script for Kiwix-serve (ID: 2976515)
 * Added static version capability to build-kiwix-release script
+* Improve the 'show' action in kiwix-manage
 * Fix contextual menu display (mous right click) on Windows (ID: 3406801)
 * Save zoom factor over reboots (ID: 3367428)
 
